Fix header alignment

--- a/public_html/sites/all/themes/ringstedtheme/css/ringsted_styles.css
+++ b/public_html/sites/all/themes/ringstedtheme/css/ringsted_styles.css
@@ -45,22 +45,26 @@ a:hover {
   border: 0;
   width: 100%; }
   /* line 9, ../scss/partials/_header.scss */
+  .sec-menu .sec-inner {
+    padding: 0; }
+  /* line 13, ../scss/partials/_header.scss */
   .sec-menu .menu-main {
     float: right;
     width: 100%; }
-  /* line 15, ../scss/partials/_header.scss */
+  /* line 19, ../scss/partials/_header.scss */
   .sec-menu .nav {
     display: inline-block; }
-  /* line 19, ../scss/partials/_header.scss */
+  /* line 23, ../scss/partials/_header.scss */
   .sec-menu li {
     display: inline-block;
     vertical-align: middle;
     *vertical-align: auto;
     *zoom: 1;
     *display: inline;
-    margin: 0 5px 0 -4px;
-    text-transform: uppercase; }
-  /* line 25, ../scss/partials/_header.scss */
+    margin: 0;
+    text-transform: uppercase;
+    float: none; }
+  /* line 30, ../scss/partials/_header.scss */
   .sec-menu a {
     font-size: 22px;
     font-size: 1.375rem;
@@ -68,16 +72,16 @@ a:hover {
     font-family: "Museo300", Helvetica, Arial, sans-serif;
     font-weight: normal;
     display: block; }
-    /* line 32, ../scss/partials/_header.scss */
+    /* line 37, ../scss/partials/_header.scss */
     .sec-menu a:hover {
       background-color: #EBEBEB;
       color: #333; }
-  /* line 40, ../scss/partials/_header.scss */
+  /* line 45, ../scss/partials/_header.scss */
   .sec-menu .active a,
   .sec-menu .active-trail a {
     color: #333;
     background-color: #EBEBEB; }
-  /* line 46, ../scss/partials/_header.scss */
+  /* line 51, ../scss/partials/_header.scss */
   .sec-menu .last {
     margin-right: 0; }
 
